--- a/package.json
+++ b/package.json
@@ -10,51 +10,52 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^1.4.1",
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/material-top-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
-    "expo": "~36.0.0",
-    "expo-av": "^8.0.0",
-    "expo-camera": "^8.2.0",
-    "expo-file-system": "^8.0.0",
-    "expo-media-library": "^8.1.0",
-    "expo-permissions": "^8.1.0",
+    "expo": "^37.0.0",
+    "expo-av": "~8.1.0",
+    "expo-camera": "~8.2.0",
+    "expo-file-system": "~8.1.0",
+    "expo-media-library": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "expokit": "^36.0.1",
     "lodash": "^4.17.15",
     "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
-    "react": "~16.9.0",
+    "react": "16.9.0",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-dom": "~16.9.0",
+    "react-dom": "16.9.0",
     "react-intl": "^4.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-cameraroll": "^1.0.0-alpha2",
     "react-native-elements": "^1.2.7",
     "react-native-fs": "^2.16.6",
-    "react-native-gesture-handler": "^1.6.0",
-    "react-native-maps": "^0.27.1",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.26.1",
     "react-native-modal": "^11.5.4",
-    "react-native-reanimated": "1.4.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-root-toast": "^3.2.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-status-bar-height": "^2.5.0",
     "react-native-swipe-gestures": "^1.0.4",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^2.13.0",
-    "react-native-unimodules": "^0.7.0",
+    "react-native-unimodules": "~0.8.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "^8.1.0"
   },
   "private": true
 }
